--- a/series.conf
+++ b/series.conf
@@ -10655,6 +10655,7 @@
 	patches.suse/msft-hv-2551-x86-hyperv-Output-host-build-info-as-normal-Windows-.patch
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
+	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
 	patches.suse/ionic-Don-t-send-reset-commands-if-FW-isn-t-running.patch
