--- a/series.conf
+++ b/series.conf
@@ -10747,6 +10747,7 @@
 	patches.suse/Bluetooth-Fix-not-checking-for-valid-hdev-on-bt_dev_.patch
 	patches.suse/Bluetooth-use-memset-avoid-memory-leaks.patch
 	patches.suse/Bluetooth-btusb-Add-another-Realtek-8761BU.patch
+	patches.suse/bnxt_en-refactor-error-handling-of-HWRM_NVM_INSTALL_.patch
 	patches.suse/bnxt_en-Eliminate-unintended-link-toggle-during-FW-r.patch
 	patches.suse/bnxt_en-Do-not-destroy-health-reporters-during-reset.patch
 	patches.suse/batman-adv-Use-netif_rx.patch
