--- a/series.conf
+++ b/series.conf
@@ -10674,6 +10674,7 @@
 	patches.suse/ionic-stretch-heartbeat-detection.patch
 	patches.suse/ionic-replace-set_vf-data-with-union.patch
 	patches.suse/msft-hv-2514-net-mana-Use-struct_size-helper-in-mana_gd_create_dm.patch
+	patches.suse/bnxt_en-Update-firmware-interface-to-1.10.2.73.patch
 	patches.suse/dt-bindings-net-xgmac_mdio-Remove-unsupported-bus-fr.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the--2e7b4a328ed6.patch
