--- a/series.conf
+++ b/series.conf
@@ -10750,6 +10750,7 @@
 	patches.suse/bnxt_en-refactor-error-handling-of-HWRM_NVM_INSTALL_.patch
 	patches.suse/bnxt_en-add-more-error-checks-to-HWRM_NVM_INSTALL_UP.patch
 	patches.suse/bnxt_en-parse-result-field-when-NVRAM-package-instal.patch
+	patches.suse/bnxt_en-introduce-initial-link-state-of-unknown.patch
 	patches.suse/bnxt_en-Eliminate-unintended-link-toggle-during-FW-r.patch
 	patches.suse/bnxt_en-Do-not-destroy-health-reporters-during-reset.patch
 	patches.suse/batman-adv-Use-netif_rx.patch
