--- a/series.conf
+++ b/series.conf
@@ -12249,6 +12249,7 @@
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
 	patches.suse/usbnet-smsc95xx-Forward-PHY-interrupts-to-PHY-driver.patch
+	patches.suse/bnxt_en-Update-firmware-interface-to-1.10.2.95.patch
 	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
