--- a/series.conf
+++ b/series.conf
@@ -13484,6 +13484,7 @@
 	patches.suse/vmxnet3-update-to-version-7.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/vmxnet3-disable-overlay-offloads-if-UPT-device-does-.patch
+	patches.suse/bnxt-Fix-typo-in-comments.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
