--- a/series.conf
+++ b/series.conf
@@ -5125,6 +5125,7 @@
 	patches.suse/net-smc-add-support-for-user-defined-EIDs
 	patches.suse/net-smc-keep-static-copy-of-system-EID
 	patches.suse/net-smc-add-generic-netlink-support-for-system-EID
+	patches.suse/ethtool-prevent-endless-loop-if-eeprom-size-is-small.patch
 	patches.suse/net-hns3-PF-support-get-unicast-MAC-address-space-as.patch
 	patches.suse/net-hns3-PF-support-get-multicast-MAC-address-space-.patch
 	patches.suse/MIPS-lantiq-dma-add-small-delay-after-reset.patch
