--- a/series.conf
+++ b/series.conf
@@ -6363,6 +6363,7 @@
 	patches.suse/usb-typec-ucsi-acpi-Reduce-the-command-completion-ti.patch
 	patches.suse/usb-typec-ucsi-Check-the-partner-alt-modes-always-if.patch
 	patches.suse/usb-typec-ucsi-Read-the-PDOs-in-separate-work.patch
+	patches.suse/usb-typec-ucsi-Better-fix-for-missing-unplug-events-.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
 	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
