--- a/series.conf
+++ b/series.conf
@@ -11274,6 +11274,7 @@
 	patches.suse/octeontx2-af-initialize-action-variable.patch
 	patches.suse/netfilter-nf_conntrack_tcp-preserve-liberal-flag-in-.patch
 	patches.suse/net-bnxt_ptp-fix-compilation-error.patch
+	patches.suse/net-dsa-bcm_sf2_cfp-fix-an-incorrect-NULL-check-on-l.patch
 	patches.suse/ptrace-Check-PTRACE_O_SUSPEND_SECCOMP-permission-on-.patch
 	patches.suse/dma-debug-fix-return-value-of-__setup-handlers.patch
 	patches.suse/cpufreq-qcom-cpufreq-nvmem-fix-reading-of-PVS-Valid-.patch
