--- a/series.conf
+++ b/series.conf
@@ -11444,6 +11444,7 @@
 	patches.suse/vrf-fix-packet-sniffing-for-traffic-originating-from.patch
 	patches.suse/skbuff-fix-coalescing-for-page_pool-fragment-recycli.patch
 	patches.suse/ice-Clear-default-forwarding-VSI-during-VSI-release.patch
+	patches.suse/net-stmmac-Fix-unset-max_speed-difference-between-DT.patch
 	patches.suse/qed-fix-ethtool-register-dump.patch
 	patches.suse/bnxt_en-Synchronize-tx-when-xdp-redirects-happen-on-.patch
 	patches.suse/bnxt_en-reserve-space-inside-receive-page-for-skb_sh.patch
