--- a/series.conf
+++ b/series.conf
@@ -11451,6 +11451,7 @@
 	patches.suse/bnxt_en-Prevent-XDP-redirect-from-running-when-stopp.patch
 	patches.suse/sfc-Do-not-free-an-empty-page_ring.patch
 	patches.suse/dpaa2-ptp-Fix-refcount-leak-in-dpaa2_ptp_probe.patch
+	patches.suse/ice-Do-not-skip-not-enabled-queues-in-ice_vc_dis_qs_.patch
 	patches.suse/net-openvswitch-don-t-send-internal-clone-attribute-.patch
 	patches.suse/net-openvswitch-fix-leak-of-nested-actions.patch
 	patches.suse/net-sfc-fix-using-uninitialized-xdp-tx_queue.patch
