--- a/series.conf
+++ b/series.conf
@@ -11559,6 +11559,7 @@
 	patches.suse/veth-Ensure-eth-header-is-in-skb-s-linear-part.patch
 	patches.suse/net-mdio-don-t-defer-probe-forever-if-PHY-IRQ-provid.patch
 	patches.suse/mlxsw-i2c-Fix-initialization-error-flow.patch
+	patches.suse/net-dsa-felix-suppress-EPROBE_DEFER-errors.patch
 	patches.suse/net-atlantic-Avoid-out-of-bounds-indexing.patch
 	patches.suse/net-smc-use-memcpy-instead-of-snprintf-to-avoid-out-of-bounds-read
 	patches.suse/net-smc-Fix-NULL-pointer-dereference-in-smc_pnet_find_ib
