--- a/series.conf
+++ b/series.conf
@@ -14231,6 +14231,9 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.6-patches.patch
 
+	# out-of-tree patches
+	patches.suse/ppc64-kdump-Limit-kdump-base-to-512MB.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
