--- a/series.conf
+++ b/series.conf
@@ -54375,6 +54375,7 @@
 	patches.suse/random-fix-data-race-on-crng_node_pool.patch
 	patches.suse/random-fix-data-race-on-crng-init-time.patch
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_boot.patch
+	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
 	patches.suse/drm-bridge-display-connector-fix-an-uninitialized-po.patch
 	patches.suse/drm-fix-null-ptr-deref-in-drm_dev_init_release.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Delete-panel-on-attac.patch
@@ -55471,6 +55472,7 @@
 	patches.suse/powerpc-add-link-stack-flush-mitigation-status-in-de.patch
 	patches.suse/powerpc-pseries-read-the-lpar-name-from-the-firmware.patch
 	patches.suse/powerpc-64-Move-paca-allocation-later-in-boot.patch
+	patches.suse/rpadlpar_io-Add-MODULE_DESCRIPTION-entries-to-kernel.patch
 	patches.suse/powerpc-perf-Don-t-use-perf_hw_context-for-trace-IMC.patch
 	patches.suse/powerpc-xive-Add-some-error-handling-code-to-xive_sp.patch
 	patches.suse/powerpc-Set-crashkernel-offset-to-mid-of-RMA-region.patch
@@ -57014,7 +57016,7 @@
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 
-	# mkp/scsi queue
+	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
@@ -57023,13 +57025,9 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.6-patches.patch
 
-	# out-of-tree patches
-	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
-
 	########################################################
 	# end of sorted patches
 	########################################################
-	patches.suse/ibmvfc-disable-MQ-channelization-by-default.patch
 
 	########################################################
 	# Unsorted patches on their way to mainline
@@ -57043,10 +57041,6 @@
 	# to get into mainline any time soon (or ever) belong
 	# to area specific sections below.
 	########################################################
-	patches.suse/powerpc-pseries-mobility-notify-network-peers-after-.patch
-	patches.suse/powerpc-pseries-group-lmb-operation-and-memblock-s.patch
-	patches.suse/powerpc-pseries-update-device-tree-before-ejecting-h.patch
-	patches.suse/rpadlpar_io-Add-MODULE_DESCRIPTION-entries-to-kernel.patch
 	patches.suse/ahci-Add-Intel-Emmitsburg-PCH-RAID-PCI-IDs.patch
 	patches.suse/block-genhd-use-atomic_t-for-disk_event-block.patch
 	patches.suse/nxp-nci-add-NXP1002-id.patch
@@ -57146,6 +57140,10 @@
 	patches.suse/s390-sles15sp2-kdump-fix-out-of-memory-with-PCI.patch
 
 	# ppc64
+	patches.suse/powerpc-pseries-mobility-notify-network-peers-after-.patch
+	patches.suse/powerpc-pseries-group-lmb-operation-and-memblock-s.patch
+	patches.suse/powerpc-pseries-update-device-tree-before-ejecting-h.patch
+	patches.suse/ibmvfc-disable-MQ-channelization-by-default.patch
 	patches.suse/powerpc-tm-Flip-the-HTM-switch-default-to-disabled.patch
 
 	# ARM
