--- a/series.conf
+++ b/series.conf
@@ -11568,6 +11568,7 @@
 	patches.suse/net-smc-Fix-NULL-pointer-dereference-in-smc_pnet_find_ib
 	patches.suse/Revert-iavf-Fix-deadlock-occurrence-during-resetting.patch
 	patches.suse/macvlan-Fix-leaking-skb-in-source-mode-with-nodst-op.patch
+	patches.suse/net-ftgmac100-access-hardware-register-after-clock-r.patch
 	patches.suse/ath9k-Properly-clear-TX-status-area-before-reporting.patch
 	patches.suse/mt76-Fix-undefined-behavior-due-to-shift-overflowing.patch
 	patches.suse/brcmfmac-sdio-Fix-undefined-behavior-due-to-shift-ov.patch
