--- a/series.conf
+++ b/series.conf
@@ -11576,6 +11576,7 @@
 	patches.suse/nl80211-correctly-check-NL80211_ATTR_REG_ALPHA2-size.patch
 	patches.suse/cfg80211-hold-bss_lock-while-updating-nontrans_list.patch
 	patches.suse/nfc-nci-add-flush_workqueue-to-prevent-uaf.patch
+	patches.suse/net-bcmgenet-Revert-Use-stronger-register-read-write.patch
 	patches.suse/cifs-Check-the-IOCB_DIRECT-flag-not-O_DIRECT.patch
 	patches.suse/cifs-release-cached-dentries-only-if-mount-is-complete.patch
 	patches.suse/cifs-Split-the-smb3_add_credits-tracepoint.patch
