--- a/series.conf
+++ b/series.conf
@@ -11723,6 +11723,7 @@
 	patches.suse/net-hns3-add-validity-check-for-message-data-length.patch
 	patches.suse/net-hns3-add-return-value-for-mailbox-handling-in-PF.patch
 	patches.suse/net-smc-sync-err-code-when-tcp-connection-was-refused
+	patches.suse/net-bcmgenet-hide-status-block-before-TX-timestampin.patch
 	patches.suse/net-phy-marvell10g-fix-return-value-on-error.patch
 	patches.suse/virtio_net-fix-wrong-buf-address-calculation-when-us.patch
 	patches.suse/ice-Fix-incorrect-locking-in-ice_vc_process_vf_msg.patch
