--- a/series.conf
+++ b/series.conf
@@ -11725,6 +11725,7 @@
 	patches.suse/net-smc-sync-err-code-when-tcp-connection-was-refused
 	patches.suse/net-bcmgenet-hide-status-block-before-TX-timestampin.patch
 	patches.suse/net-phy-marvell10g-fix-return-value-on-error.patch
+	patches.suse/net-dsa-mv88e6xxx-Fix-port_hidden_wait-to-account-fo.patch
 	patches.suse/virtio_net-fix-wrong-buf-address-calculation-when-us.patch
 	patches.suse/ice-Fix-incorrect-locking-in-ice_vc_process_vf_msg.patch
 	patches.suse/ice-Protect-vf_state-check-by-cfg_lock-in-ice_vc_pro.patch
