--- a/series.conf
+++ b/series.conf
@@ -11732,6 +11732,7 @@
 	patches.suse/ice-Protect-vf_state-check-by-cfg_lock-in-ice_vc_pro.patch
 	patches.suse/ice-fix-use-after-free-when-deinitializing-mailbox-s.patch
 	patches.suse/bnx2x-fix-napi-API-usage-sequence.patch
+	patches.suse/net-fec-add-missing-of_node_put-in-fec_enet_init_sto.patch
 	patches.suse/ixgbe-ensure-IPsec-VF-PF-compatibility.patch
 	patches.suse/Revert-ibmvnic-Add-ethtool-private-flag-for-driver-d.patch
 	patches.suse/netfilter-nf_conntrack_tcp-re-init-for-syn-packets-o.patch
