--- a/series.conf
+++ b/series.conf
@@ -11931,6 +11931,7 @@
 	patches.suse/net-phy-micrel-Pass-.probe-for-KS8737.patch
 	patches.suse/selftests-add-ping-test-with-ping_group_range-tuned.patch
 	patches.suse/net-mscc-ocelot-fix-last-VCAP-IS1-IS2-filter-persist.patch
+	patches.suse/net-mscc-ocelot-fix-VCAP-IS2-filters-matching-on-bot.patch
 	patches.suse/net-sfc-fix-memory-leak-due-to-ptp-channel.patch
 	patches.suse/ionic-fix-missing-pci_release_regions-on-error-in-io.patch
 	patches.suse/dim-initialize-all-struct-fields.patch
