--- a/series.conf
+++ b/series.conf
@@ -11933,6 +11933,7 @@
 	patches.suse/net-mscc-ocelot-fix-last-VCAP-IS1-IS2-filter-persist.patch
 	patches.suse/net-mscc-ocelot-fix-VCAP-IS2-filters-matching-on-bot.patch
 	patches.suse/net-mscc-ocelot-restrict-tc-trap-actions-to-VCAP-IS2.patch
+	patches.suse/net-mscc-ocelot-avoid-corrupting-hardware-counters-w.patch
 	patches.suse/net-sfc-fix-memory-leak-due-to-ptp-channel.patch
 	patches.suse/ionic-fix-missing-pci_release_regions-on-error-in-io.patch
 	patches.suse/dim-initialize-all-struct-fields.patch
