--- a/series.conf
+++ b/series.conf
@@ -11954,6 +11954,7 @@
 	patches.suse/nl80211-fix-locking-in-nl80211_set_tx_bitrate_mask.patch
 	patches.suse/rfkill-uapi-fix-RFKILL_IOCTL_MAX_SIZE-ioctl-request-.patch
 	patches.suse/Bluetooth-Fix-the-creation-of-hdev-name.patch
+	patches.suse/net-ethernet-mediatek-ppe-fix-wrong-size-passed-to-m.patch
 	patches.suse/net-smc-non-blocking-recvmsg-return-EAGAIN-when-no-data-and-signal_pending
 	patches.suse/net-sfc-ef10-fix-memory-leak-in-efx_ef10_mtd_probe.patch
 	patches.suse/0002-drm-i915-Fix-race-in-__i915_vma_remove_closed.patch
