--- a/series.conf
+++ b/series.conf
@@ -12015,6 +12015,7 @@
 	patches.suse/ARM-dts-aspeed-g6-fix-SPI1-SPI2-quad-pin-group.patch
 	patches.suse/ARM-dts-aspeed-Add-video-engine-to-g6.patch
 	patches.suse/selinux-fix-bad-cleanup-on-error-in-hashtab_duplicat.patch
+	patches.suse/net-ipa-record-proper-RX-transaction-count.patch
 	patches.suse/Revert-can-m_can-pci-use-custom-bit-timings-for-Elkh.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
