--- a/series.conf
+++ b/series.conf
@@ -12017,6 +12017,7 @@
 	patches.suse/selinux-fix-bad-cleanup-on-error-in-hashtab_duplicat.patch
 	patches.suse/net-ipa-record-proper-RX-transaction-count.patch
 	patches.suse/net-ipa-get-rid-of-a-duplicate-initialization.patch
+	patches.suse/net-macb-Increment-rx-bd-head-after-allocating-skb-a.patch
 	patches.suse/Revert-can-m_can-pci-use-custom-bit-timings-for-Elkh.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
