--- a/series.conf
+++ b/series.conf
@@ -12022,6 +12022,7 @@
 	patches.suse/net-systemport-Fix-an-error-handling-path-in-bcm_sys.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
+	patches.suse/net-qla3xxx-Fix-a-test-in-ql_reset_work.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
