--- a/series.conf
+++ b/series.conf
@@ -12024,6 +12024,7 @@
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
 	patches.suse/net-qla3xxx-Fix-a-test-in-ql_reset_work.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
+	patches.suse/net-mlx5e-Block-rx-gro-hw-feature-in-switchdev-mode.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
