--- a/series.conf
+++ b/series.conf
@@ -12026,6 +12026,7 @@
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
 	patches.suse/net-mlx5e-Block-rx-gro-hw-feature-in-switchdev-mode.patch
 	patches.suse/net-mlx5e-Properly-block-LRO-when-XDP-is-enabled.patch
+	patches.suse/net-mlx5e-Properly-block-HW-GRO-when-XDP-is-enabled.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
