--- a/series.conf
+++ b/series.conf
@@ -12028,6 +12028,7 @@
 	patches.suse/net-mlx5e-Properly-block-LRO-when-XDP-is-enabled.patch
 	patches.suse/net-mlx5e-Properly-block-HW-GRO-when-XDP-is-enabled.patch
 	patches.suse/net-mlx5e-Remove-HW-GRO-from-reported-features.patch
+	patches.suse/net-mlx5-Drain-fw_reset-when-removing-device.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
