--- a/series.conf
+++ b/series.conf
@@ -12223,6 +12223,7 @@
 	patches.suse/selftests-resctrl-Fix-null-pointer-dereference-on-op.patch
 	patches.suse/kselftest-cgroup-fix-test_stress.sh-to-use-OUTPUT-di.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
+	patches.suse/net-dsa-mt7530-1G-can-also-support-1000BASE-X-link-m.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
 	patches.suse/net-ieee802154-ca8210-Fix-lifs-sifs-periods.patch
