--- a/series.conf
+++ b/series.conf
@@ -9074,6 +9074,7 @@
 	patches.suse/PCI-pci-bridge-emul-Fix-definitions-of-reserved-bits.patch
 	patches.suse/PCI-pci-bridge-emul-Correctly-set-PCIe-capabilities.patch
 	patches.suse/PCI-pci-bridge-emul-Set-PCI_STATUS_CAP_LIST-for-PCIe.patch
+	patches.suse/PCI-Correct-misspelled-words.patch
 	patches.suse/msft-hv-2479-PCI-hv-Use-PCI_ERROR_RESPONSE-to-identify-config-rea.patch
 	patches.suse/livepatch-Fix-kobject-refcount-bug-on-klp_init_patch_early-failure-path.patch
 	patches.suse/livepatch-Fix-missing-unlock-on-error-in-klp_enable_patch.patch
