--- a/series.conf
+++ b/series.conf
@@ -2171,6 +2171,7 @@
 	patches.kernel.org/5.19.10-010-drm-msm-rd-Fix-FIFO-full-deadlock.patch
 	patches.kernel.org/5.19.10-011-peci-cpu-Fix-use-after-free-in-adev_release.patch
 	patches.kernel.org/5.19.10-012-kvm-x86-mmu-Always-flush-TLBs-when-enabling-d.patch
+	patches.kernel.org/5.19.10-013-dt-bindings-iio-gyroscope-bosch-bmg160-correc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
