--- a/series.conf
+++ b/series.conf
@@ -2183,6 +2183,7 @@
 	patches.kernel.org/5.19.10-022-drm-amdgpu-disable-FRU-access-on-special-SIEN.patch
 	patches.kernel.org/5.19.10-023-drm-amd-pm-use-vbios-carried-pptable-for-all-.patch
 	patches.kernel.org/5.19.10-024-nvme-pci-add-NVME_QUIRK_BOGUS_NID-for-Lexar-N.patch
+	patches.kernel.org/5.19.10-025-nvmet-tcp-fix-unhandled-tcp-states-in-nvmet_t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
