--- a/series.conf
+++ b/series.conf
@@ -6386,6 +6386,7 @@
 	patches.suse/usb-typec-tipd-Add-short-circuit-for-no-irqs.patch
 	patches.suse/usb-typec-tipd-Add-support-for-Apple-CD321X.patch
 	patches.suse/usb-typec-tipd-Switch-CD321X-power-state-to-S0.patch
+	patches.suse/usb-typec-tipd-Remove-FIXME-about-testing-with-I2C_F.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
 	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
