--- a/series.conf
+++ b/series.conf
@@ -8880,6 +8880,7 @@
 	patches.suse/usb-gadget-f_fs-Use-stream_open-for-endpoint-files.patch
 	patches.suse/usb-xhci-mtk-remove-unnecessary-error-check.patch
 	patches.suse/usb-xhci-mtk-fix-random-remote-wakeup.patch
+	patches.suse/usb-typec-ucsi-Expose-number-of-alternate-modes-in-p.patch
 	patches.suse/usb-dwc3-gadget-Skip-checking-Update-Transfer-status.patch
 	patches.suse/usb-dwc3-gadget-Ignore-Update-Transfer-cmd-params.patch
 	patches.suse/usb-dwc3-gadget-Skip-reading-GEVNTSIZn.patch
