--- a/blacklist.conf
+++ b/blacklist.conf
@@ -402,3 +402,5 @@ f5840e0da6397586f3dbfaf15227588d1218dfe3 # already applied
 953503751a426413ea8aee2299ae3ee971b70d9b # reverts commit 6f5c672d17f583b081e283927f5040f726c54598, which is not backported
 1dbd11ca75fe664d3e54607547771d021f531f59 # removal of unused function, would break KABI
 ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
+e9b6013a7ce31535b04b02ba99babefe8a8599fa # documentation
+
