--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1611,3 +1611,4 @@ ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant to our configs
 519ea6f1c82fcdc9842908155ae379de47818778 # This needs f4693c2716b35d (arm64: mm: extend linear region for 52-bit VA configurations) which is way to intrusive
 7f34b43e07cb512b28543fdcb9f35d1fbfda9ebc # Fixes clang warning
 ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
+e9b6013a7ce31535b04b02ba99babefe8a8599fa # documentation
