--- a/series.conf
+++ b/series.conf
@@ -6505,6 +6505,7 @@
 	patches.suse/ABI-sysfs-devices-power-add-some-debug-sysfs-files.patch
 	patches.suse/ABI-obsolete-sysfs-bus-iio-add-some-missing-blank-li.patch
 	patches.suse/driver-core-Fix-possible-memory-leak-in-device_link_.patch
+	patches.suse/drivers-base-component.c-remove-superfluous-header-f.patch
 	patches.suse/firmware_loader-fix-pre-allocated-buf-built-in-firmw.patch
 	patches.suse/dyndbg-make-dyndbg-a-known-cli-param.patch
 	patches.suse/device-property-Add-missed-header-in-fwnode.h.patch
