--- a/series.conf
+++ b/series.conf
@@ -11418,6 +11418,7 @@
 	patches.suse/firmware-sysfb-fix-platform-device-leak-in-error-pat.patch
 	patches.suse/firmware-google-Properly-state-IOMEM-dependency.patch
 	patches.suse/component-Replace-most-references-to-master-with-agg.patch
+	patches.suse/component-Add-common-helper-for-compare-release-func.patch
 	patches.suse/driver-core-dd-fix-return-value-of-__setup-handler.patch
 	patches.suse/Documentation-add-link-to-stable-release-candidate-t.patch
 	patches.suse/Documentation-update-stable-tree-link.patch
