--- a/series.conf
+++ b/series.conf
@@ -11327,6 +11327,7 @@
 	patches.suse/usb-cdnsp-fix-cdnsp_decode_trb-function-to-properly-.patch
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
 	patches.suse/usb-ehci-add-pci-device-support-for-Aspeed-platforms.patch
+	patches.suse/usb-ulpi-Add-debugfs-support.patch
 	patches.suse/xhci-dbc-refactor-xhci_dbc_init.patch
 	patches.suse/xhci-dbc-create-and-remove-dbc-structure-in-dbgtty-d.patch
 	patches.suse/xhci-dbc-Rename-xhci_dbc_init-and-xhci_dbc_exit.patch
