--- a/series.conf
+++ b/series.conf
@@ -11325,6 +11325,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Do-not-program-SPARAM.patch
 	patches.suse/usb-gadget-tegra-xudc-Fix-control-endpoint-s-definit.patch
 	patches.suse/usb-cdnsp-fix-cdnsp_decode_trb-function-to-properly-.patch
+	patches.suse/usb-core-Bail-out-when-port-is-stuck-in-reset-loop.patch
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
 	patches.suse/usb-ehci-add-pci-device-support-for-Aspeed-platforms.patch
 	patches.suse/usb-ulpi-Add-debugfs-support.patch
