--- a/series.conf
+++ b/series.conf
@@ -11328,6 +11328,7 @@
 	patches.suse/usb-cdnsp-fix-cdnsp_decode_trb-function-to-properly-.patch
 	patches.suse/usb-core-Bail-out-when-port-is-stuck-in-reset-loop.patch
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
+	patches.suse/USB-ACPI-Replace-acpi_bus_get_device.patch
 	patches.suse/usb-ehci-add-pci-device-support-for-Aspeed-platforms.patch
 	patches.suse/usb-ulpi-Add-debugfs-support.patch
 	patches.suse/xhci-dbc-refactor-xhci_dbc_init.patch
