--- a/series.conf
+++ b/series.conf
@@ -11330,6 +11330,7 @@
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
 	patches.suse/USB-ACPI-Replace-acpi_bus_get_device.patch
 	patches.suse/usb-ehci-add-pci-device-support-for-Aspeed-platforms.patch
+	patches.suse/USB-usbfs-Use-a-spinlock-instead-of-atomic-accesses-.patch
 	patches.suse/usb-ulpi-Add-debugfs-support.patch
 	patches.suse/xhci-dbc-refactor-xhci_dbc_init.patch
 	patches.suse/xhci-dbc-create-and-remove-dbc-structure-in-dbgtty-d.patch
