--- a/series.conf
+++ b/series.conf
@@ -11337,6 +11337,7 @@
 	patches.suse/xhci-dbc-Rename-xhci_dbc_init-and-xhci_dbc_exit.patch
 	patches.suse/usb-remove-Link-Powermanagement-LPM-disable-before-p.patch
 	patches.suse/usb-dwc3-pci-Set-the-swnode-from-inside-dwc3_pci_qui.patch
+	patches.suse/USB-core-Update-kerneldoc-for-usb_get_dev-and-usb_ge.patch
 	patches.suse/usb-typec-tipd-Forward-plug-orientation-to-typec-sub.patch
 	patches.suse/xhci-make-xhci_handshake-timeout-for-xhci_reset-adju.patch
 	patches.suse/xhci-fix-garbage-USBSTS-being-logged-in-some-cases.patch
