--- a/series.conf
+++ b/series.conf
@@ -10421,6 +10421,7 @@
 	patches.suse/cpuidle-intel_idle-Update-intel_idle-kerneldoc-comme.patch
 	patches.suse/PM-hibernate-fix-__setup-handler-error-handling.patch
 	patches.suse/PM-suspend-fix-return-value-of-__setup-handler.patch
+	patches.suse/PM-sleep-Add-device-name-to-suspend_report_result.patch
 	patches.suse/PM-domains-Fix-sleep-in-atomic-bug-caused-by-genpd_d.patch
 	patches.suse/thermal-int340x-Check-for-NULL-after-calling-kmemdup.patch
 	patches.suse/thermal-int340x-Increase-bitmap-size.patch
