--- a/series.conf
+++ b/series.conf
@@ -11327,6 +11327,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Do-not-program-SPARAM.patch
 	patches.suse/usb-gadget-tegra-xudc-Fix-control-endpoint-s-definit.patch
 	patches.suse/usb-cdnsp-fix-cdnsp_decode_trb-function-to-properly-.patch
+	patches.suse/usb-host-xhci-plat-Remove-useless-DMA-32-fallback-co.patch
 	patches.suse/usb-core-Bail-out-when-port-is-stuck-in-reset-loop.patch
 	patches.suse/USB-hcd-pci-Use-PCI_STD_NUM_BARS-when-checking-stand.patch
 	patches.suse/USB-ACPI-Replace-acpi_bus_get_device.patch
