--- a/series.conf
+++ b/series.conf
@@ -8648,6 +8648,7 @@
 	patches.suse/ACPICA-Executer-Fix-the-REFCLASS_REFOF-case-in-acpi_.patch
 	patches.suse/ACPICA-Fix-wrong-interpretation-of-PCC-address.patch
 	patches.suse/ACPICA-Hardware-Do-not-flush-CPU-cache-when-entering.patch
+	patches.suse/ACPI-scan-Introduce-acpi_fetch_acpi_dev.patch
 	patches.suse/ACPI-scan-Create-platform-device-for-BCM4752-and-LNV.patch
 	patches.suse/PCI-ACPI-Fix-acpi_pci_osc_control_set-kernel-doc-com.patch
 	patches.suse/ACPI-x86-Drop-PWM2-device-on-Lenovo-Yoga-Book-from-a.patch
