--- a/series.conf
+++ b/series.conf
@@ -5707,6 +5707,7 @@
 	patches.suse/devlink-Clean-not-executed-param-notifications.patch
 	patches.suse/octeontx2-af-Increase-number-of-reserved-entries-in-.patch
 	patches.suse/net-core-constify-mac-addrs-in-selftests.patch
+	patches.suse/net-rtnetlink-use-__dev_addr_set.patch
 	patches.suse/can-bittiming-can_fixup_bittiming-change-type-of-tse.patch
 	patches.suse/net-dsa-avoid-refcount-warnings-when-port_-fdb-mdb-_.patch
 	patches.suse/net-hns3-add-debugfs-support-for-interrupt-coalesce.patch
