--- a/series.conf
+++ b/series.conf
@@ -8534,6 +8534,7 @@
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
 	patches.suse/net-add-net-device-refcount-tracker-infrastructure.patch
+	patches.suse/net-linkwatch-add-net-device-refcount-tracker.patch
 	patches.suse/net-smc-Clear-memory-when-release-and-reuse-buffer
 	patches.suse/ath11k-set-correct-NL80211_FEATURE_DYNAMIC_SMPS-for-.patch
 	patches.suse/wcn36xx-ensure-pairing-of-init_scan-finish_scan-and-.patch
