--- a/series.conf
+++ b/series.conf
@@ -14030,6 +14030,7 @@
 	patches.suse/wifi-rtw88-check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_dump-fix-comment.patch
+	patches.suse/e1000e-remove-unnecessary-range-check-in-e1000e_phc_.patch
 	patches.suse/net-rose-fix-netdev-reference-changes.patch
 	patches.suse/net-usb-make-USB_RTL8153_ECM-non-user-configurable.patch
 	patches.suse/i2c-npcm-Remove-own-slave-addresses-2-10.patch
