--- a/series.conf
+++ b/series.conf
@@ -5375,6 +5375,7 @@
 	patches.suse/eth-fwnode-change-the-return-type-of-mac-address-hel.patch
 	patches.suse/eth-fwnode-remove-the-addr-len-from-mac-helpers.patch
 	patches.suse/eth-fwnode-add-a-helper-for-loading-netdev-dev_addr.patch
+	patches.suse/ethernet-use-device_get_ethdev_address.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
 	patches.suse/rsi-fix-rate-mask-set-leading-to-P2P-failure.patch
