--- a/series.conf
+++ b/series.conf
@@ -8752,6 +8752,7 @@
 	patches.suse/bpf-Make-per_cpu_ptr-return-rdonly-PTR_TO_MEM.patch
 	patches.suse/bpf-Add-MEM_RDONLY-for-helper-args-that-are-pointers.patch
 	patches.suse/bpf-selftests-Test-PTR_TO_RDONLY_MEM.patch
+	patches.suse/net-Don-t-include-filter.h-from-net-sock.h.patch
 	patches.suse/net-smc-remove-redundant-re-assignment-of-pointer-link
 	patches.suse/batman-adv-allow-netlink-usage-in-unprivileged-conta.patch
 	patches.suse/ethernet-sfc-remove-redundant-rc-variable.patch
