--- a/series.conf
+++ b/series.conf
@@ -12699,6 +12699,7 @@
 	patches.suse/sfc-siena-Remove-duplicate-check-on-segments.patch
 	patches.suse/eth-bnxt-make-ulp_id-unsigned-to-make-GCC-12-happy.patch
 	patches.suse/net-qed-fix-typos-in-comments.patch
+	patches.suse/qed-fix-typos-in-comments.patch
 	patches.suse/wifi-rtlwifi-remove-always-true-condition-pointed-ou.patch
 	patches.suse/Bluetooth-fix-dangling-sco_conn-and-use-after-free-i.patch
 	patches.suse/Bluetooth-hci_qca-Use-del_timer_sync-before-freeing.patch
