--- a/series.conf
+++ b/series.conf
@@ -13116,6 +13116,7 @@
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
 	patches.suse/sfc-siena-fix-considering-that-all-channels-have-TX-.patch
+	patches.suse/sfc-siena-fix-wrong-tx-channel-offset-with-efx_separ.patch
 	patches.suse/ax25-Fix-ax25-session-cleanup-problems.patch
 	patches.suse/ARM-pxa-maybe-fix-gpio-lookup-tables.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
