--- a/series.conf
+++ b/series.conf
@@ -13252,6 +13252,7 @@
 	patches.suse/gpio-pca953x-use-the-correct-register-address-to-do-.patch
 	patches.suse/gpio-adp5588-Remove-support-for-platform-setup-and-t.patch
 	patches.suse/net-mellanox-fix-open-coded-for_each_set_bit.patch
+	patches.suse/qed-rework-qed_rdma_bmap_free.patch
 	patches.suse/octeontx2-pf-replace-bitmap_weight-with-bitmap_empty.patch
 	patches.suse/drm-amd-pm-use-bitmap_-from-to-_arr32-where-appropri.patch
 	patches.suse/cifs-fix-potential-double-free-during-failed-mount.patch
