--- a/series.conf
+++ b/series.conf
@@ -5619,6 +5619,7 @@
 	patches.suse/ice-Nuild-fix.patch
 	patches.suse/mlx5-fix-build-after-merge.patch
 	patches.suse/net-xen-use-eth_hw_addr_set.patch
+	patches.suse/usb-smsc-use-eth_hw_addr_set.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
