--- a/series.conf
+++ b/series.conf
@@ -8532,6 +8532,7 @@
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
+	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
 	patches.suse/net-smc-Clear-memory-when-release-and-reuse-buffer
 	patches.suse/ath11k-set-correct-NL80211_FEATURE_DYNAMIC_SMPS-for-.patch
 	patches.suse/wcn36xx-ensure-pairing-of-init_scan-finish_scan-and-.patch
